gen/WebParser.java
// Generated from C:/Users/User/Desktop/comp/CompilerProject/src/antlr/WebParser.g4 by ANTLR 4.13.2

package antlr.generated;

import ast.web.ContentHtmlText;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class WebParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JINJA_EXPR_OPEN=1, JINJA_BLOCK_OPEN=2, JINJA_COMMENT_OPEN=3, HTML_COMMENT_OPEN=4, 
		HTML_DECLARATION=5, CSS_STYLE_TAG=6, HTML_CLOSE_OPEN=7, HTML_OPEN=8, TEXT=9, 
		WS=10, HTML_IDENTIFIER=11, EQUALS=12, HTML_WS=13, HTML_ATTR_VALUE_OPEN_DQ=14, 
		HTML_ATTR_VALUE_OPEN_SQ=15, HTML_TAG_SELF_CLOSE=16, HTML_TAG_CLOSE=17, 
		HTML_OTHER=18, HTML_COMMENT_CLOSE=19, HTML_COMMENT_TEXT=20, HTML_COMMENT_WS=21, 
		CSS_STYLE_CLOSE=22, CSS_WS=23, CSS_BLOCK_WS=24, CSS_BRACE_OPEN=25, CSS_BLOCK_END=26, 
		CSS_SEMICOLON=27, CSS_IMPORTANT=28, CSS_CLASS=29, CSS_ID=30, CSS_PSEUDO=31, 
		CSS_PROPERTY=32, CSS_COLON=33, CSS_VALUE=34, CSS_SELECTOR=35, CSS_BLOCK_OTHER=36, 
		HTML_ATTR_VALUE_CLOSE_DQ=37, HTML_ATTR_VALUE_CLOSE_SQ=38, JINJA_EXPR_OPEN_IN_ATTR=39, 
		JINJA_BLOCK_OPEN_IN_ATTR=40, JINJA_COMMENT_OPEN_IN_ATTR=41, HTML_ATTR_VALUE_TEXT=42, 
		HTML_ATTR_VALUE_WS=43, JINJA_EXPR_CLOSE=44, JINJA_IDENT=45, JINJA_NUMBER=46, 
		JINJA_STRING=47, JINJA_OP=48, JINJA_DOT=49, JINJA_COMMA=50, JINJA_COLON=51, 
		JINJA_LP=52, JINJA_RP=53, JINJA_LB=54, JINJA_RB=55, JINJA_WS=56, JINJA_OTHER=57, 
		JINJA_BLOCK_CLOSE=58, JINJA_BLOCK_IDENT=59, JINJA_BLOCK_NUMBER=60, JINJA_BLOCK_STRING=61, 
		JINJA_FOR=62, JINJA_IN=63, JINJA_ENDFOR=64, JINJA_IF=65, JINJA_ELIF=66, 
		JINJA_ELSE=67, JINJA_ENDIF=68, JINJA_SET=69, JINJA_BLOCK_EQ=70, JINJA_BLOCK_DOT=71, 
		JINJA_BLOCK_COMMA=72, JINJA_BLOCK_COLON=73, JINJA_BLOCK_LP=74, JINJA_BLOCK_RP=75, 
		JINJA_BLOCK_LB=76, JINJA_BLOCK_RB=77, JINJA_BLOCK_WS=78, JINJA_BLOCK_OTHER=79, 
		JINJA_COMMENT_CLOSE=80, JINJA_COMMENT_TEXT=81, JINJA_COMMENT_WS=82;
	public static final int
		RULE_template = 0, RULE_contentItem = 1, RULE_htmlElement = 2, RULE_htmlVoidElement = 3, 
		RULE_htmlNormalElement = 4, RULE_htmlAttribute = 5, RULE_htmlAttributeValue = 6, 
		RULE_dqValue = 7, RULE_sqValue = 8, RULE_htmlAttrValueItem = 9, RULE_htmlText = 10, 
		RULE_cssStyleBlock = 11, RULE_cssBody = 12, RULE_cssRule = 13, RULE_cssSelector = 14, 
		RULE_cssDeclarations = 15, RULE_cssDeclaration = 16, RULE_jinjaExpression = 17, 
		RULE_jinjaExprBody = 18, RULE_jinjaBlock = 19, RULE_jinjaBlockInner = 20, 
		RULE_forStart = 21, RULE_forEnd = 22, RULE_ifStart = 23, RULE_elifPart = 24, 
		RULE_elsePart = 25, RULE_endIfPart = 26, RULE_setStmt = 27, RULE_simpleStmt = 28, 
		RULE_jinjaBlockExpr = 29, RULE_jinjaComment = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "contentItem", "htmlElement", "htmlVoidElement", "htmlNormalElement", 
			"htmlAttribute", "htmlAttributeValue", "dqValue", "sqValue", "htmlAttrValueItem", 
			"htmlText", "cssStyleBlock", "cssBody", "cssRule", "cssSelector", "cssDeclarations", 
			"cssDeclaration", "jinjaExpression", "jinjaExprBody", "jinjaBlock", "jinjaBlockInner", 
			"forStart", "forEnd", "ifStart", "elifPart", "elsePart", "endIfPart", 
			"setStmt", "simpleStmt", "jinjaBlockExpr", "jinjaComment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'<!--'", null, null, "'</'", "'<'", null, null, 
			null, null, null, null, null, "'/>'", "'>'", null, "'-->'", null, null, 
			null, null, null, "'{'", "'}'", "';'", "'!important'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'}}'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'%}'", null, null, null, "'for'", "'in'", "'endfor'", "'if'", 
			"'elif'", "'else'", "'endif'", "'set'", null, null, null, null, null, 
			null, null, null, null, null, "'#}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JINJA_EXPR_OPEN", "JINJA_BLOCK_OPEN", "JINJA_COMMENT_OPEN", "HTML_COMMENT_OPEN", 
			"HTML_DECLARATION", "CSS_STYLE_TAG", "HTML_CLOSE_OPEN", "HTML_OPEN", 
			"TEXT", "WS", "HTML_IDENTIFIER", "EQUALS", "HTML_WS", "HTML_ATTR_VALUE_OPEN_DQ", 
			"HTML_ATTR_VALUE_OPEN_SQ", "HTML_TAG_SELF_CLOSE", "HTML_TAG_CLOSE", "HTML_OTHER", 
			"HTML_COMMENT_CLOSE", "HTML_COMMENT_TEXT", "HTML_COMMENT_WS", "CSS_STYLE_CLOSE", 
			"CSS_WS", "CSS_BLOCK_WS", "CSS_BRACE_OPEN", "CSS_BLOCK_END", "CSS_SEMICOLON", 
			"CSS_IMPORTANT", "CSS_CLASS", "CSS_ID", "CSS_PSEUDO", "CSS_PROPERTY", 
			"CSS_COLON", "CSS_VALUE", "CSS_SELECTOR", "CSS_BLOCK_OTHER", "HTML_ATTR_VALUE_CLOSE_DQ", 
			"HTML_ATTR_VALUE_CLOSE_SQ", "JINJA_EXPR_OPEN_IN_ATTR", "JINJA_BLOCK_OPEN_IN_ATTR", 
			"JINJA_COMMENT_OPEN_IN_ATTR", "HTML_ATTR_VALUE_TEXT", "HTML_ATTR_VALUE_WS", 
			"JINJA_EXPR_CLOSE", "JINJA_IDENT", "JINJA_NUMBER", "JINJA_STRING", "JINJA_OP", 
			"JINJA_DOT", "JINJA_COMMA", "JINJA_COLON", "JINJA_LP", "JINJA_RP", "JINJA_LB", 
			"JINJA_RB", "JINJA_WS", "JINJA_OTHER", "JINJA_BLOCK_CLOSE", "JINJA_BLOCK_IDENT", 
			"JINJA_BLOCK_NUMBER", "JINJA_BLOCK_STRING", "JINJA_FOR", "JINJA_IN", 
			"JINJA_ENDFOR", "JINJA_IF", "JINJA_ELIF", "JINJA_ELSE", "JINJA_ENDIF", 
			"JINJA_SET", "JINJA_BLOCK_EQ", "JINJA_BLOCK_DOT", "JINJA_BLOCK_COMMA", 
			"JINJA_BLOCK_COLON", "JINJA_BLOCK_LP", "JINJA_BLOCK_RP", "JINJA_BLOCK_LB", 
			"JINJA_BLOCK_RB", "JINJA_BLOCK_WS", "JINJA_BLOCK_OTHER", "JINJA_COMMENT_CLOSE", 
			"JINJA_COMMENT_TEXT", "JINJA_COMMENT_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
	 
		public TemplateContext() { }
		public void copyFrom(TemplateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateNodeContext extends TemplateContext {
		public TerminalNode EOF() { return getToken(WebParser.EOF, 0); }
		public List<ContentItemContext> contentItem() {
			return getRuleContexts(ContentItemContext.class);
		}
		public ContentItemContext contentItem(int i) {
			return getRuleContext(ContentItemContext.class,i);
		}
		public TemplateNodeContext(TemplateContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterTemplateNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitTemplateNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitTemplateNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			_localctx = new TemplateNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 782L) != 0)) {
				{
				{
				setState(62);
				contentItem();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentItemContext extends ParserRuleContext {
		public ContentItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contentItem; }
	 
		public ContentItemContext() { }
		public void copyFrom(ContentItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContentJinjaCommentContext extends ContentItemContext {
		public JinjaCommentContext jinjaComment() {
			return getRuleContext(JinjaCommentContext.class,0);
		}
		public ContentJinjaCommentContext(ContentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterContentJinjaComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitContentJinjaComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitContentJinjaComment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContentHtmlElementContext extends ContentItemContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public ContentHtmlElementContext(ContentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterContentHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitContentHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitContentHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContentJinjaExpressionContext extends ContentItemContext {
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public ContentJinjaExpressionContext(ContentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterContentJinjaExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitContentJinjaExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitContentJinjaExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContentHtmlTextContext extends ContentItemContext {
		public HtmlTextContext htmlText() {
			return getRuleContext(HtmlTextContext.class,0);
		}
		public ContentHtmlTextContext(ContentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterContentHtmlText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitContentHtmlText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitContentHtmlText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ContentJinjaBlockContext extends ContentItemContext {
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public ContentJinjaBlockContext(ContentItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterContentJinjaBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitContentJinjaBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitContentJinjaBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentItemContext contentItem() throws RecognitionException {
		ContentItemContext _localctx = new ContentItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_contentItem);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_OPEN:
				_localctx = new ContentHtmlElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				htmlElement();
				}
				break;
			case TEXT:
				_localctx = new ContentHtmlTextContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				htmlText();
				}
				break;
			case JINJA_EXPR_OPEN:
				_localctx = new ContentJinjaExpressionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				jinjaExpression();
				}
				break;
			case JINJA_BLOCK_OPEN:
				_localctx = new ContentJinjaBlockContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				jinjaBlock();
				}
				break;
			case JINJA_COMMENT_OPEN:
				_localctx = new ContentJinjaCommentContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				jinjaComment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContext extends ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
	 
		public HtmlElementContext() { }
		public void copyFrom(HtmlElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementVoidContext extends HtmlElementContext {
		public HtmlVoidElementContext htmlVoidElement() {
			return getRuleContext(HtmlVoidElementContext.class,0);
		}
		public HtmlElementVoidContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlElementVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlElementVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlElementVoid(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementNormalContext extends HtmlElementContext {
		public HtmlNormalElementContext htmlNormalElement() {
			return getRuleContext(HtmlNormalElementContext.class,0);
		}
		public HtmlElementNormalContext(HtmlElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlElementNormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlElementNormal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlElementNormal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElement);
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new HtmlElementVoidContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				htmlVoidElement();
				}
				break;
			case 2:
				_localctx = new HtmlElementNormalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				htmlNormalElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlVoidElementContext extends ParserRuleContext {
		public HtmlVoidElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlVoidElement; }
	 
		public HtmlVoidElementContext() { }
		public void copyFrom(HtmlVoidElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VoidElementNodeContext extends HtmlVoidElementContext {
		public TerminalNode HTML_OPEN() { return getToken(WebParser.HTML_OPEN, 0); }
		public TerminalNode HTML_IDENTIFIER() { return getToken(WebParser.HTML_IDENTIFIER, 0); }
		public TerminalNode HTML_TAG_SELF_CLOSE() { return getToken(WebParser.HTML_TAG_SELF_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public VoidElementNodeContext(HtmlVoidElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterVoidElementNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitVoidElementNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitVoidElementNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlVoidElementContext htmlVoidElement() throws RecognitionException {
		HtmlVoidElementContext _localctx = new HtmlVoidElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlVoidElement);
		int _la;
		try {
			_localctx = new VoidElementNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(HTML_OPEN);
			setState(82);
			match(HTML_IDENTIFIER);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HTML_IDENTIFIER) {
				{
				{
				setState(83);
				htmlAttribute();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(HTML_TAG_SELF_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlNormalElementContext extends ParserRuleContext {
		public HtmlNormalElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlNormalElement; }
	 
		public HtmlNormalElementContext() { }
		public void copyFrom(HtmlNormalElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NormalElementNodeContext extends HtmlNormalElementContext {
		public TerminalNode HTML_OPEN() { return getToken(WebParser.HTML_OPEN, 0); }
		public List<TerminalNode> HTML_IDENTIFIER() { return getTokens(WebParser.HTML_IDENTIFIER); }
		public TerminalNode HTML_IDENTIFIER(int i) {
			return getToken(WebParser.HTML_IDENTIFIER, i);
		}
		public List<TerminalNode> HTML_TAG_CLOSE() { return getTokens(WebParser.HTML_TAG_CLOSE); }
		public TerminalNode HTML_TAG_CLOSE(int i) {
			return getToken(WebParser.HTML_TAG_CLOSE, i);
		}
		public TerminalNode HTML_CLOSE_OPEN() { return getToken(WebParser.HTML_CLOSE_OPEN, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public List<ContentItemContext> contentItem() {
			return getRuleContexts(ContentItemContext.class);
		}
		public ContentItemContext contentItem(int i) {
			return getRuleContext(ContentItemContext.class,i);
		}
		public NormalElementNodeContext(HtmlNormalElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterNormalElementNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitNormalElementNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitNormalElementNode(this);
			else return visitor.visitChildren(this);
		}
	}
